--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     container_name: telegram-news-nginx
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "${API_PORT:-80}:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
