--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,20 @@ services:
     image: nginx:alpine
     container_name: telegram-news-nginx
     restart: unless-stopped
+    environment:
+      - DOMAIN=${DOMAIN:-localhost}
     ports:
       - "${API_PORT:-80}:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf.template:/etc/nginx/nginx.conf.template:ro
       - ./ssl:/etc/nginx/ssl:ro
       - ./logs/nginx:/var/log/nginx
+    command: >
+      sh -c "
+        envsubst '$$DOMAIN' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf &&
+        nginx -g 'daemon off;'
+      "
     depends_on:
       - fastapi
     networks:
