--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   fastapi:
     build: .
@@ -29,14 +27,10 @@ services:
       - "${API_PORT:-80}:80"
       - "443:443"
     volumes:
-      - ./nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
       - ./logs/nginx:/var/log/nginx
-    command: >
-      sh -c "
-        envsubst '$$DOMAIN' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf &&
-        nginx -g 'daemon off;'
-      "
+    command: nginx -g 'daemon off;'
     depends_on:
       - fastapi
     networks:
