--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
 
     server {
         listen 80;
-        server_name ${DOMAIN:-localhost};
+        server_name localhost;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
